<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_marginTop="15dp"

            android:textSize="25sp"
            android:text="@string/titSignup" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TableRow>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15sp"

                    android:text="@string/lbl_nomb"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/txt_Nombre"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:hint=""
                    android:inputType="textPersonName" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15sp"

                    android:text="@string/lbl_email"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/txt_Email"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:hint=""
                    android:inputType="textEmailAddress" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15sp"

                    android:text="@string/lbl_contra"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/txt_Contra"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:hint=""
                    android:inputType="textPassword" />
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/btn_Ok"

            android:textSize="18sp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="25dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_OK" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>